# sunrise-equation

./: README.md  Slunce.cabal  sunrise-equation.cabal  sunrise-equation.cws
src/: Main.hs  Test.hs
