name:                sunrise-equation
version:             0.1.0.0
synopsis:            Calculates the times of Sun raise and set.
-- description:         
-- license:             
license-file:        LICENSE
author:              Martin Vlk
maintainer:          martin@vlkk.cz
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sunrise
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    ForeignFunctionInterface, TemplateHaskell
  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, QuickCheck >=2.8 && <2.9, array >=0.5 && <0.6, transformers >=0.4 && <0.5, bytestring >=0.10 && <0.11, time
  hs-source-dirs:      src
  default-language:    Haskell2010
